--- a/portfolio.html
+++ b/portfolio.html
@@ -42,7 +42,8 @@
   <section class="container my-5">
     <div class="row align-items-center">
       <div class="col-md-4">
-        <img src="your-photo.jpg" alt="Sneha" class="img-fluid rounded shadow">
+        <img src="img.png" alt="Sneha" class="img-fluid rounded shadow">
+
       </div>
       <div class="col-md-8">
         <h2>About Me</h2>
